examples/test/testpolicy13839.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13839
  namespace: namespace69
spec:
  podSelector:
    matchLabels:
      key45: value48
      key8: value42
      key35: value22
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key42: value4
          key0: value33
          key25: value46
      podSelector:
        matchLabels:
          key24: value46
          key19: value10
